Changes to CMakeLists if test and sed calls in linux processing script for generating make call.

--- a/mex/CMakeLists.txt
+++ b/mex/CMakeLists.txt
@@ -51,7 +51,7 @@ INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR})
 
 SET(BITNESS 32)
 
-IF( ${CMAKE_SIZEOF_VOID_P} EQUAL 8)
+IF( "${CMAKE_SIZEOF_VOID_P}" EQUAL 8)
   SET(BITNESS 64)
 ENDIF()
 
