Attempt at guarding against unsettedness of cmake_sizeof_void_p .

--- a/mex/CMakeLists.txt
+++ b/mex/CMakeLists.txt
@@ -51,7 +51,13 @@ INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR})
 
 SET(BITNESS 32)
 
-IF( "${CMAKE_SIZEOF_VOID_P}" EQUAL 8)
+if(NOT CMAKE_SIZEOF_VOID_P)
+  set(CMAKE_SIZEOF_VOID_P 4)  # replace 4 with 8 for 64-bit machine
+else(NOT CMAKE_SIZEOF_VOID_P)
+  message("CMAKE_SIZEOF_VOID_P : ${CMAKE_SIZEOF_VOID_P}")
+endif(NOT CMAKE_SIZEOF_VOID_P)
+
+IF( CMAKE_SIZEOF_VOID_P EQUAL 8)
   SET(BITNESS 64)
 ENDIF()
 
